# lumina

./: .gitignore  .gitmodules  Cargo.toml  README.md  create_asset_junctions.bat  create_asset_junctions.sh  network_settings.ron  run.bat  run.sh
.github/workflows/: ci.yaml  release.yaml
assets/: main.typ  registry.json  settings.ron  terrain_config.ron
assets/blueprints/: AnimationTestBP.glb  Crate.glb  Door.glb  FactoryBaseBackground.glb  LargeOre.glb  Laser.glb  MediumOre.glb  MovingDoor.glb  NormalBlueprint.glb  Player.glb  SmallOre.glb  SpawnPoint.glb  SpawnPointA.glb  SpawnPointA.meta.ron  SpawnPointB.glb  SpawnPointB.meta.ron  SpawnerPlatform.glb  SpotLight.glb  TeleportTrack.glb  TeleportTrack.meta.ron  TeleporterBase.glb  TeleporterEnd.glb  TeleporterEnd.meta.ron  TeleporterHead.glb  TeleporterStart.glb  TeleporterStart.meta.ron  Tesseract.glb
assets/enoki/: ammo_hit.ron  booster_flakes.ron  gun_sparks.ron  lumina.ron  muzzle_flash.ron  smoke.ron
assets/levels/: Ammo.glb  AmmoCannonVisual.glb  AmmoLongRangeConfig.glb  AmmoLongRangeVisual.glb  AssassinSpaceship.glb  DefaultCannon.glb  Lobby.assets.ron  Lobby.glb  Lobby.meta.ron  Local.glb  Multiplayer.glb  Scene.glb  SpaceShipAssassinConfig.glb  SpaceShipAssassinVisual.glb  Spaceship.glb  SpaceshipModel.glb  WeaponCannonConfig.glb  WeaponCannonVisual.glb  World.glb  World.meta.ron
assets/lumina_blueprints/: Normal.glb
assets/materials/: AmmoDark.glb  AmmoOrange1.glb  AmmoOrange2.glb  AreaText.glb  ArrowBlue.glb  AssassinBlack1.glb  AssassinBlack2.glb  AssassinGray1.glb  AssassinGray2.glb  AssassinYellow1.glb  AssassinYellow2.glb  AssassinYellow3.glb  Base0.glb  Base1.glb  Base2.glb  Base3.5.glb  Base3.glb  Base4.glb  Base5.001.glb  Base5.glb  Base6.glb  Base7.glb  Base7Glow.glb  BeltBlack1.001.glb  BeltBlack1.002.glb  BeltBlack1.003.glb  BeltBlack1.004.glb  BeltBlack1.005.glb  BeltBlack1.glb  BeltGray1.001.glb  BeltGray1.002.glb  BeltGray1.glb  BeltGreen1.001.glb  BeltGreen1.002.glb  BeltGreen1.glb  BeltGreen2.001.glb  BeltGreen2.002.glb  BeltGreen2.glb  BeltGreen3.001.glb  BeltGreen3.002.glb  (+142 more)
assets/spaceship_blueprints/: Assassin.glb  Defender.glb
assets/typst/: effector_popup.typ  main_window.typ  monokai_pro.typ  perf_metrics.typ  server.typ  utils.typ
assets/weapon_blueprints/: Cannon.glb  GattlingGun.glb
blender/: Ammos.blend  Levels.blend  Lobbies.blend  Lobby.blend  Luminas.blend  Map1.blend  Maps.blend  Ores.blend  Spaceships.blend  Terrain.blend  Tesseract.blend  TesseractAnimation.blend  Weapons.blend
crates/bevy_post_process/: Cargo.toml
crates/bevy_post_process/examples/: post_process.rs
crates/bevy_post_process/src/: chromatic_aberration.rs  glitch.rs  greyscale.rs  lib.rs  vignette.rs
crates/bevy_radiance_cascades/: Cargo.toml
crates/bevy_shader_utils/: Cargo.toml
crates/client/: Cargo.toml
crates/lumina_client/: Cargo.toml
crates/lumina_client/src/: audio.rs  blueprint_visual.rs  blueprints.rs  camera.rs  effector.rs  game.rs  in_game.rs  lib.rs  local_lobby.rs  main.rs  matchmaking.rs  multiplayer_lobby.rs  player.rs  sandbox.rs  screens.rs  source_entity.rs  tesseract.rs  typ_animation.rs  type_registry.rs  ui.rs
crates/lumina_client/src/game/: ore_vfx.rs
crates/lumina_client/src/player/: aim.rs  ammo.rs  kda.rs  name.rs  spaceship.rs  weapon.rs
crates/lumina_client/src/player/spaceship/: ability_vfx.rs  state_vfx.rs
crates/lumina_client/src/screens/: in_game.rs  local_lobby.rs  matchmaking.rs  multiplayer_lobby.rs  sandbox.rs
crates/lumina_client/src/ui/: game_mode.rs  game_over.rs  game_ui.rs  kill_cue.rs  lobby.rs  main_menu.rs  movement_button.rs  respawn_cue.rs  sandbox.rs  settings.rs  spaceship_select.rs  splash.rs
crates/lumina_client/src/ui/game_ui/: boostmeter.rs  health.rs  main_ui.rs  objective_area_arrrow.rs  player_stats.rs  score_bar.rs  settings.rs  spaceship_stats.rs  timer.rs  weapon_selector.rs
crates/lumina_common/: Cargo.toml  settings.ron
crates/lumina_common/src/: asset_from_component.rs  auto_timer.rs  blueprint_type.rs  blueprint_visual.rs  convert_3d_to_2d.rs  cooldown_effect.rs  entity_pool.rs  lib.rs  math_utils.rs  physics.rs  settings.rs  source_entity.rs  type_registry.rs  utils.rs
crates/lumina_common/src/physics/: physics_interp.rs  world.rs
crates/lumina_dev/: Cargo.toml
crates/lumina_shared/: Cargo.toml  network_settings.ron
crates/lumina_shared/src/: action.rs  blueprint_collider.rs  blueprints.rs  effector.rs  game.rs  health.rs  lib.rs  player.rs  procedural_map.rs  protocol.rs  settings.rs  terrain.rs  type_registry.rs
crates/lumina_shared/src/game/: animator.rs  teleporter.rs
crates/lumina_shared/src/player/: ammo.rs  lumina.rs  objective.rs  spaceship.rs  spawn_point.rs  weapon.rs
crates/lumina_shared/src/player/spaceship/: ability.rs  movement.rs
crates/lumina_shared/src/procedural_map/: grid_map.rs  random_walk_cave.rs
crates/lumina_shared/src/terrain/: config.rs  grid_map.rs  random_walk_cave.rs
crates/lumina_terrain/: Cargo.toml
crates/lumina_terrain/src/: config.rs  lib.rs  map.rs
crates/lumina_ui/: Cargo.toml
crates/lumina_ui/src/: effector_popup.rs  interaction.rs  lib.rs  main_window.rs  perf_metrics.rs
crates/lumina_vfx/: Cargo.toml
crates/lumina_vfx/examples/: material_2d.rs
crates/lumina_vfx/src/: lib.rs  main_prepass.rs  material2d.rs  origin_colors.rs  particle.rs  type_registry.rs
crates/server/: Cargo.toml
crates/test_bed/: Cargo.toml
crates/test_bed/assets/enoki/: gun_sparks.ron
crates/test_bed/assets/shaders/enoki/: muzzle_flash.wgsl
crates/test_bed/assets/typst/test/: test_ui.typ
crates/test_bed/examples/: animation.rs  booster_vfx.rs  event_trigger.rs  gun_fire_vfx.rs  sub_apps.rs  terrain.rs  test_ui.rs
crates/test_bed/src/: main.rs
examples/: test_ui.rs
external_crates/blenvy/: Cargo.toml
external_crates/blenvy/src/blueprints/: animation.rs  mod.rs
src/: client.rs  dev_tools.rs  game.rs  grid_spawning.rs  lib.rs  main.rs  procedural_algorithm.rs  protocol.rs  rectangle_spawning.rs  server.rs  settings.rs  shared.rs  steam.rs  ui.rs  utils.rs
(+194 files in other folders)
