[package]
name = "bevy_post_process"
version.workspace = true
edition.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
bevy = { workspace = true }

[dev-dependencies]
bevy-inspector-egui = { workspace = true }
bevy = { workspace = true, features = ["dynamic_linking", "file_watcher"] }

[lints]
workspace = true
