[package]
name = "lumina_client"
version.workspace = true
edition.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
lumina_common = { workspace = true }
lumina_shared = { workspace = true }
lumina_ui = { workspace = true }
lumina_vfx = { workspace = true }
lumina_dev = { workspace = true, optional = true }
bevy_shader_utils = { workspace = true }
bevy_radiance_cascades = { workspace = true }
velyst = { workspace = true }
bevy = { workspace = true }
bevy_vello = { workspace = true }
lightyear = { workspace = true }
leafwing-input-manager = { workspace = true }
avian2d = { workspace = true }
blenvy = { workspace = true }
noisy_bevy = { workspace = true }
bevy_enoki = { workspace = true }
bevy_motiongfx = { workspace = true }
bevy_coroutine = { workspace = true }
strum = { workspace = true }
rand = { workspace = true }
bevy-inspector-egui = { workspace = true, optional = true }

[features]
default = [
  # Default to a native dev build.
  "dev_native",
]
dev = [
  # Improve compile times for dev builds by linking Bevy as a dynamic library.
  "bevy/dynamic_linking",
  "dep:lumina_dev",
  "dep:bevy-inspector-egui",
  "lumina_common/dev"
]
dev_native = [
  "dev",
  # Enable asset hot reloading for native dev builds.
  "bevy/file_watcher",
]

[lints]
workspace = true
