[package]
name = "lumina_common"
version.workspace = true
edition.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
bevy = { workspace = true }
lightyear = { workspace = true }
leafwing-input-manager = { workspace = true }
avian2d = { workspace = true }
blenvy = { workspace = true }
serde = { workspace = true }
bevy_transform_interpolation = { workspace = true }
strum = { workspace = true }

[lints]
workspace = true

[features]
dev = ["avian2d/debug-plugin"]
