[package]
name = "lumina_terrain"
version.workspace = true
edition.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
lumina_common = { workspace = true }
bevy = { workspace = true }
noisy_bevy = { workspace = true }
avian2d = { workspace = true }
blenvy = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
