[package]
name = "lumina_ui"
version.workspace = true
edition.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
velyst = { workspace = true }
bevy_motiongfx = { workspace = true }
bevy = { workspace = true }
bevy_vello = { workspace = true }
typst-library = "0.13.1"

[lints]
workspace = true
