[package]
name = "lumina_vfx"
version.workspace = true
edition.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
lumina_common = { workspace = true }
bevy = { workspace = true }
bevy_enoki = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

[lints]
workspace = true
