[package]
name = "lumina_vfx"
version.workspace = true
edition.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
lumina_common = { workspace = true }
bevy_shader_utils = { workspace = true }
bevy = { workspace = true, default-features = false }
bevy_enoki = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
smallvec = { workspace = true }

[lints]
workspace = true
