[package]
name = "test_bed"
version.workspace = true
edition.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
bevy_shader_utils = { workspace = true }
velyst = { workspace = true }
bevy = { workspace = true, features = ["file_watcher"] }
bevy_vello = { workspace = true }
bevy_enoki = { workspace = true }

[lints]
workspace = true
