[package]
name = "test_bed"
version.workspace = true
edition.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
lumina_common = { workspace = true }
bevy = { workspace = true, features = ["file_watcher"] }
bevy_radiance_cascades = { workspace = true }
blenvy = { workspace = true }

[dev-dependencies]
bevy_shader_utils = { workspace = true }
velyst = { workspace = true }
bevy_vello = { workspace = true }
bevy_enoki = { workspace = true }
noisy_bevy = { workspace = true }
avian2d = { workspace = true }
rand = { workspace = true }
bevy-inspector-egui = { workspace = true }

[lints]
workspace = true
